--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Meeting1",
-    "slug": "Meeting1",
+    "name": "AndroidAppDev-16",
+    "slug": "AndroidAppDev-16",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
